--- a/Survey/source/styles/informal/_o-message.scss
+++ b/Survey/source/styles/informal/_o-message.scss
@@ -75,7 +75,7 @@ details[open] summary:after {
     padding: globals.$default-padding 16px globals.$default-padding 42px;
     background-color: #E4EBF4;
     color: globals.$information;
-    z-index: 2;
+    z-index: 99; // expectation is that these messages should appear above everything bar a question cover
 
     &::before {
         position: absolute;
